[project]
name = "cybernord-relay"
version = "0.1.0"
description = "Python SDK for CyberNord Relay (signature validation helpers)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
